# flux-runtime-kor

./: CHARTER.md  DOCKSIDE-EXAM.md  README.md  pyproject.toml
docs/: design.md
for-fleet/: health-check-2026-04-12_171943.json
src/flux_kor/: __init__.py  bridge_adapter.py  capability.py  cli.py  conjugation.py  cps.py  encoder.py  fir.py  honorifics.py  interpreter.py  particle_scope.py  particles.py  vm.py
src/flux_kor/vocabulary/: __init__.py  a2a.ese  honorifics.toml  maritime.ese  math.ese
src/flux_runtime_kor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_fir.py  test_interpreter_kor.py
